# shipwright

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.sqlx/: query-0b994178d49173ab3b556e72fd8ca476715f79cf5998a0407a8dac12be2d57fe.json  query-25a2ebbd09e6b286b0250d9d231488baa6b8732bc5dcd85a48f0c9648a3a46c2.json  query-60a282a39be035bc5d5ecc32136b6ed8ba90d0933b435ddfd9ab88df8e3b8247.json  query-63ee78c43ef6ff9f680ef1fa07e6860d955d66a9c45940a77d5afaa6ddd3861b.json  query-6af2150d37dfc8c4007b6c7790ceb13b76e4a32643231ed91c3024c1797ed46b.json  query-79cf87b47e5ff3b4ba768d781d6b0da6c235f5d26ae0f95cd7d00487b3c149a5.json  query-acd31e347b2c58c5067cb405fc126eb59d415aaf3809ad23f4340d0b68b978b1.json  query-b0ba19877a3e1f9c238a90eee886c5c86c8ff3f63ff98114ed2de9e2a6d694bc.json  query-c86adf1c7af2084b60f62a0500073cb2e28ff28c72ede5e53ced244f47956faa.json  query-e7c946d3bba0d270f315a7b2fc56e922b8fabfe01267df28c35f284550b6f80a.json  query-f818b73a220aa65be1cb8b0754e7b6cce037817bfe4b53d6c764165c64ff708a.json  query-fb0bade751e9d74760cbe1bf67cc3f51d1b2c4e83eb466f82b555e596bb93fc3.json
cli/: Cargo.toml  README.md
cli/blueprints/controller/: file.rs  test.rs
cli/blueprints/controller/minimal/: controller.rs
cli/blueprints/entity/: _file.rs  file.rs
cli/blueprints/migration/: file.sql
cli/blueprints/test/: file.rs
cli/blueprints/view/: file.rs
cli/blueprints/view/templates/: index.html  show.html  update.html
cli/src/: lib.rs
cli/src/util/: mod.rs  query.rs  ui.rs
config/: Cargo.toml  app.toml
config/environments/: development.toml  production.toml  staging.toml  test.toml
config/src/: lib.rs
context/: Cargo.toml
context/src/: account.rs
db/: Cargo.toml  shipwright_jobs.db-shm  shipwright_jobs__test.db-shm
db/migrations/: 1743132929__create_invoice_table.sql  1743212850__create_invoices_table.sql  1743229463__create_invoices_table.sql  1744107271__create_lions_table.sql  1744110031__create_lions_table.sql  20250205003803_create_todos_table.sql  20250212205449_create_users_table.sql  20250212205453_create_sessions_table.sql  20250225234855_create_registration_tokens_table.sql
db/src/: lib.rs
db/src/entities/: invoices.rs  lions.rs  mod.rs  register_token.rs  session.rs  todo.rs  user.rs
mailer/: Cargo.toml
mailer/src/: auth.rs  lib.rs
scripts/: create_or_migrate_db.sh
ui/: Cargo.toml
ui/assets/components/icon/: x.mjs
ui/assets/components/toast/: container.mjs  content.mjs
ui/assets/static/css/: output.css
ui/assets/styles/: input.css
ui/assets/styles/blocks/: button.css  form.css  navbar.css  toast.css
ui/assets/styles/compositions/: box.css  center.css  cluster.css  cover.css  flow.css  grid.css  icon.css  imposter.css  limiter.css  repel.css  sidebar.css  stack.css  switcher.css  wrapper.css
ui/assets/styles/global/: global.css  reset.css  variables.css
ui/assets/styles/utilities/: color-invert.css  region.css  slide-out.css  visually-hidden.css
ui/assets/templates/: base.html  index.html  test.html
ui/assets/templates/auth/login/: index.html
ui/assets/templates/auth/register/: index.html
ui/assets/templates/auth/register_confirm/: index.html
ui/assets/templates/invoices/: index.html  show.html  update.html
ui/assets/templates/lions/: index.html  show.html  update.html
ui/assets/templates/todos/: index.html  show.html  update.html
ui/src/: components.rs  lib.rs  static_assets.rs  view_engine.rs
web/: Cargo.toml
web/src/: app.rs  error.rs  format.rs  lib.rs  main.rs  router.rs  state.rs  tracing.rs
web/src/controllers/: home.rs  invoice.rs  lion.rs  mod.rs  ping.rs  todos.rs
web/src/controllers/auth/: login.rs  logout.rs  mod.rs  register.rs  register_confirm.rs
web/src/middlewares/: auth.rs  flash.rs  mod.rs
web/src/views/: home.rs  invoices.rs  lions.rs  mod.rs  todos.rs
web/src/views/auth/: login.rs  mod.rs  register.rs  register_confirm.rs
web/tests/integration/: invoice_test.rs  lion_test.rs  login_test.rs  main.rs  todos_test.rs
web/tests/integration/fixtures/: todos.sql  users.sql
worker/: Cargo.toml
worker/src/: lib.rs
worker/src/jobs/: mod.rs  send_email.rs  sync_api_data.rs
