[package]
name = "shipwright_db"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[features]
test-helpers = ["dep:fake"]

[dependencies]
shipwright_config = { path = "../config" }

async-trait = "0.1.86"
color-eyre = "0.6.3"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", default-features = false, features = [
  "sqlite",
  "runtime-tokio-rustls",
  "macros",
  "uuid",
  "json",
  "chrono",
  "migrate",
] }
thiserror = "2.0.11"
validator = { version = "0.20.0", features = ["derive"] }
fake = { version = "4.0.0", features = [
  "derive",
  "uuid",
  "chrono",
], optional = true }
axum-login = "0.17.0"
argon2 = { version = "0.5.3", features = ["std"] }
rand = { version = "0.9.0", features = ["std_rng"] }
chrono = { version = "0.4.40", features = ["serde"] }
uuid = { version = "1.16.0", features = ["v4", "serde"] }
