[package]
name = "shipwright_db"
version = "0.1.0"
edition = "2024"

[lib]
doctest = false

[features]
test-helpers = ["dep:fake"]

[dependencies]
shipwright_config = { path = "../config" }

async-trait = "0.1.86"
color-eyre = "0.6.3"
serde = { version = "1.0.217", features = ["derive"] }
sqlx = { version = "0.8.3", default-features = false, features = [
  "sqlite",
  "runtime-tokio-rustls",
  "macros",
  "uuid",
  "json",
  "chrono",
  "time",
  "migrate",
] }
thiserror = "2.0.11"
validator = { version = "0.20.0", features = ["derive"] }
fake = { version = "4.0.0", features = [
  "derive",
  "uuid",
  "time",
], optional = true }
axum-login = "0.17.0"
argon2 = { version = "0.5.3", features = ["std"] }
rand = { version = "0.9.0", features = ["std_rng"] }
uuid = { version = "1.16.0", features = ["v7", "serde"] }
time = { version = "0.3.41", features = ["serde"] }
chrono = { version = "0.4.40", features = ["serde"] }
