[package]
name = "shipwright_ui"
version = "0.1.0"
edition = "2024"
publish = false

[lib]
# examples in docs don't run without a running database, etc.
doctest = false


[dependencies]
shipwright_config = { path = "../config" }
thiserror = "2.0"
minijinja = { version = "2.8.0", features = ["loader"] }
minijinja-autoreload = { version = "2.8.0" }
extism = "1.10.0"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
tokio = { version = "1.34", features = ["full"] }
tracing = "0.1"
axum = "0.8.1"
notify = "8.0.0"
tower-livereload = "0.9.6"
tower-http = { version = "0.6.2", features = ["fs"] }
